--- a/app/src/main/res/layout/fragment_fixtures.xml
+++ b/app/src/main/res/layout/fragment_fixtures.xml
@@ -5,9 +5,10 @@
     tools:context="com.irrationalstudio.fragments.FixturesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_fixture_fragment" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="460dp"
+        android:id="@+id/listView3"
+        android:layout_gravity="left|top" />
 </FrameLayout>
