--- a/app/src/main/res/layout/fragment_league_table.xml
+++ b/app/src/main/res/layout/fragment_league_table.xml
@@ -8,7 +8,7 @@
 
     <ListView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="460dp"
         android:id="@+id/listView2"
         android:layout_gravity="left|top"
         android:clickable="false" />
